# django-auth-simple-login

./: .env  README.md  pyproject.toml
auth/auth/: settings.py  urls.py
auth/myapps/: __init__.py  admin.py  forms.py  models.py
auth/myapps/endpoints/: __init__.py  auth.py  urls.py  views.py
auth/myapps/migrations/: 0001_initial.py  0002_alter_account_password.py
auth/static/custom/: index.js  style.css
auth/templates/: login.html  register.html
django_auth/: script.py
